Added Travis CI and updated baseimage as docker-base:16.04

--- a/config/nginx/403.html
+++ b/config/nginx/403.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Error</title>
+<title>Access Denied</title>
 <style>
     body {
         width: 35em;
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1>An error occurred.</h1>
-<p>Sorry, Please try again later.</p>
+<h1>Access Denied</h1>
+<p>Sorry, you are not authorized to access the page.</p>
 </body>
 </html>
