--- a/config/nginx/404.html
+++ b/config/nginx/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Error</title>
+<title>File not found</title>
 <style>
     body {
         width: 35em;
@@ -11,7 +11,8 @@
 </style>
 </head>
 <body>
-<h1>An error occurred.</h1>
-<p>Sorry, Please try again later.</p>
+<h1>File not found</h1>
+<p>Sorry, the page you are looking for is currently unavailable.<br/>
+Please try again later.</p>
 </body>
 </html>
