--- a/config/nginx/405.html
+++ b/config/nginx/405.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Error</title>
+<title>Method not allowed</title>
 <style>
     body {
         width: 35em;
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1>An error occurred.</h1>
-<p>Sorry, Please try again later.</p>
+<h1>Method not allowed</h1>
+<p>Sorry, you are not allowed to perform such request on the page..</p>
 </body>
 </html>
