--- a/config/nginx/index.html
+++ b/config/nginx/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to nginx!</title>
+<title>Welcome to Nginx!</title>
 <style>
     body {
         width: 35em;
@@ -11,8 +11,8 @@
 </style>
 </head>
 <body>
-<h1>Welcome to nginx!</h1>
-<p>If you see this page, the nginx web server is successfully installed and
+<h1>Welcome to Nginx!</h1>
+<p>If you see this page, the Nginx web server is successfully installed and
 working. Further configuration is required.</p>
 </body>
 </html>
